--- a/src/components/SidePanels/SidePanels.styl
+++ b/src/components/SidePanels/SidePanels.styl
@@ -10,6 +10,9 @@
     overflow auto
     styled-scrollbars()
 
+    &_resizing
+      user-select none
+
   &__wrapper
     --snap-rotation 90deg
     top 0
